{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 25,
  "lineage": "abf2b942-7e89-8f66-d28f-eacfc0222f82",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-047447b7347db0b68",
            "owner_id": "526669632594",
            "tags": {
              "Name": "devops-test-igw"
            },
            "vpc_id": "vpc-09ebe339b82a0838f"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-047447b7347db0b68",
            "id": "r-rtb-0e0d2f5fce42b2ca01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0d2f5fce42b2ca0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main_igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e0d2f5fce42b2ca0",
            "owner_id": "526669632594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047447b7347db0b68",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-test-public-route-table"
            },
            "vpc_id": "vpc-09ebe339b82a0838f"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f63d2b2ea303a55",
            "route_table_id": "rtb-0e0d2f5fce42b2ca0",
            "subnet_id": "subnet-04368b0ac4024d8b1"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526669632594:subnet/subnet-04368b0ac4024d8b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04368b0ac4024d8b1",
            "map_public_ip_on_launch": true,
            "owner_id": "526669632594",
            "tags": {
              "Name": "devops-test-public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-09ebe339b82a0838f"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526669632594:vpc/vpc-09ebe339b82a0838f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f118f1420fc6d845",
            "default_route_table_id": "rtb-043d275ac4ec71fd7",
            "default_security_group_id": "sg-04f0cdaa5f371d2b5",
            "dhcp_options_id": "dopt-07f1217d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09ebe339b82a0838f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-043d275ac4ec71fd7",
            "owner_id": "526669632594",
            "tags": {
              "Name": "devops-test-vpc"
            }
          }
        }
      ]
    }
  ]
}